fixed spacing on cards

--- a/react-app/src/components/SingleBoardPage/BoardModal.css
+++ b/react-app/src/components/SingleBoardPage/BoardModal.css
@@ -30,7 +30,7 @@
 
 .list-container {
     /* margin: 0px; */
-    width: 175px;
+    width: 185px;
     background: rgba(0, 0, 0, 0.815);
     margin-top: 10px;
     border-radius: 10px;
@@ -45,6 +45,7 @@
     display: flex;
     flex-direction: row;
     gap: 8px;
+    padding-top: 10px;
 }
 
 .add-list button {
@@ -214,6 +215,5 @@
     background-color: #57606a;
     color: white;
     border-radius: 10px;
-
 
 }
