--- a/react-app/src/components/SingleBoardPage/CreateCardModal/CreateCardModal.css
+++ b/react-app/src/components/SingleBoardPage/CreateCardModal/CreateCardModal.css
@@ -44,3 +44,7 @@
     margin-left: 110px;
 
 }
+
+.create-card-container {
+    padding-top: 10px;
+}
